<?xml version="1.0" encoding="utf-8"?>
<org.fossify.voicerecorder.fragments.RecorderFragment xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/recorder_holder"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <org.fossify.commons.views.MyAppBarLayout
        android:id="@+id/recorder_appbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/recorder_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:titleTextAppearance="@style/AppTheme.ActionBar.TitleTextStyle"
            tools:title="Recording 1" />

    </org.fossify.commons.views.MyAppBarLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/recorder_card"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/media_card_margin"
        app:cardCornerRadius="@dimen/media_card_corner"
        app:cardElevation="0dp"
        app:strokeWidth="0dp"
        app:layout_constraintBottom_toTopOf="@+id/recording_duration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recorder_appbar">

        <com.visualizer.amplitude.AudioRecordView
            android:id="@+id/recorder_visualizer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/activity_margin"
            app:chunkAlignTo="center"
            app:chunkMaxHeight="200dp"
            app:chunkMinHeight="2dp"
            app:chunkRoundedCorners="true"
            app:chunkSoftTransition="true"
            app:chunkSpace="1dp"
            app:chunkWidth="3dp" />

    </com.google.android.material.card.MaterialCardView>

    <org.fossify.commons.views.MyTextView
        android:id="@+id/recording_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/bigger_margin"
        android:textSize="@dimen/extra_big_text_size"
        app:layout_constraintBottom_toTopOf="@+id/pause_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="00:00" />

    <!-- The single record button (idle state). When recording starts it transforms into
         the Pause + Stop buttons below. -->
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/toggle_recording_button"
        android:layout_width="@dimen/toggle_recording_button_size"
        android:layout_height="@dimen/toggle_recording_button_size"
        android:layout_marginBottom="@dimen/record_fab_margin_bottom"
        android:background="@drawable/circle_button_background"
        android:clickable="true"
        android:contentDescription="@string/recorder"
        android:focusable="true"
        android:padding="@dimen/normal_margin"
        android:src="@drawable/ic_record_circle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/pause_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/normal_margin"
        android:layout_marginBottom="@dimen/record_fab_margin_bottom"
        android:text="@string/pause"
        android:visibility="gone"
        app:icon="@drawable/ic_pause_vector"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/stop_button"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/stop_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/record_fab_margin_bottom"
        android:text="@string/stop"
        android:visibility="gone"
        app:icon="@drawable/ic_stop_vector"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/pause_button"
        tools:visibility="visible" />

</org.fossify.voicerecorder.fragments.RecorderFragment>
