<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/playback_coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <org.fossify.commons.views.MyAppBarLayout
        android:id="@+id/playback_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/playback_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/color_primary"
            app:menu="@menu/playback"
            app:titleTextAppearance="@style/AppTheme.ActionBar.TitleTextStyle" />

    </org.fossify.commons.views.MyAppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/playback_card"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/media_card_margin"
            android:layout_weight="1"
            app:cardCornerRadius="@dimen/media_card_corner"
            app:cardElevation="0dp"
            app:strokeWidth="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                    <org.fossify.voicerecorder.views.WaveformView
                        android:id="@+id/waveform_view"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="@dimen/activity_margin" />

                    <ProgressBar
                        android:id="@+id/waveform_loading"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center" />

                    <androidx.core.widget.NestedScrollView
                        android:id="@+id/transcript_panel"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fillViewport="true"
                        android:visibility="gone">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:padding="@dimen/activity_margin">

                            <org.fossify.commons.views.MyTextView
                                android:id="@+id/transcript_language"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:alpha="0.6"
                                android:textAllCaps="true"
                                android:textSize="@dimen/smaller_text_size"
                                android:visibility="gone"
                                tools:text="English"
                                tools:visibility="visible" />

                            <org.fossify.commons.views.MyTextView
                                android:id="@+id/transcript_view"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingTop="@dimen/tiny_margin"
                                android:textIsSelectable="true"
                                android:textSize="@dimen/bigger_text_size"
                                tools:text="The quick brown fox jumps over the lazy dog." />

                            <Button
                                android:id="@+id/transcribe_button"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginTop="@dimen/normal_margin"
                                android:text="@string/transcribe"
                                android:visibility="gone"
                                tools:visibility="visible" />

                        </LinearLayout>

                    </androidx.core.widget.NestedScrollView>

                </FrameLayout>

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/playback_tabs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:tabGravity="fill"
                    app:tabMode="fixed">

                    <com.google.android.material.tabs.TabItem
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/waveform" />

                    <com.google.android.material.tabs.TabItem
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/transcript_tab" />

                </com.google.android.material.tabs.TabLayout>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <RelativeLayout
            android:id="@+id/playback_controls_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/activity_margin"
            android:paddingTop="@dimen/normal_margin"
            tools:ignore="HardcodedText">

            <org.fossify.commons.views.MyTextView
                android:id="@+id/player_progress_current"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="00:00" />

            <org.fossify.commons.views.MyTextView
                android:id="@+id/player_progress_max"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="00:00" />

            <org.fossify.commons.views.MySeekBar
                android:id="@+id/player_progressbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/player_progress_current"
                android:max="0" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/player_progressbar"
                android:paddingTop="@dimen/player_controls_padding_vertical"
                android:paddingBottom="@dimen/record_fab_margin_bottom">

                <ImageView
                    android:id="@+id/play_pause_btn"
                    android:layout_width="@dimen/toggle_recording_button_size"
                    android:layout_height="@dimen/toggle_recording_button_size"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/circle_button_background"
                    android:contentDescription="@string/playpause"
                    android:padding="@dimen/normal_margin"
                    android:src="@drawable/ic_play_vector" />

                <ImageView
                    android:id="@+id/replay_btn"
                    android:layout_width="@dimen/normal_icon_size"
                    android:layout_height="@dimen/normal_icon_size"
                    android:layout_alignTop="@+id/play_pause_btn"
                    android:layout_alignBottom="@+id/play_pause_btn"
                    android:layout_marginEnd="@dimen/big_margin"
                    android:layout_toStartOf="@+id/play_pause_btn"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/skip_back_5s"
                    android:padding="@dimen/medium_margin"
                    android:src="@drawable/ic_previous_vector" />

                <ImageView
                    android:id="@+id/forward_btn"
                    android:layout_width="@dimen/normal_icon_size"
                    android:layout_height="@dimen/normal_icon_size"
                    android:layout_alignTop="@+id/play_pause_btn"
                    android:layout_alignBottom="@+id/play_pause_btn"
                    android:layout_marginStart="@dimen/big_margin"
                    android:layout_toEndOf="@+id/play_pause_btn"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/skip_forward_10s"
                    android:padding="@dimen/medium_margin"
                    android:src="@drawable/ic_next_vector" />

            </RelativeLayout>

        </RelativeLayout>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
